<resources>
    <string name="app_name" translatable="false">StarLight</string>
    <string name="app_version" translatable="false">v0.3.0 Alpha ✦</string>
    <string name="nav_header_title" translatable="false">Project StarLight 🌟</string>
    <string name="nav_header_subtitle" translatable="false">@string/app_version</string>
    <string name="nav_header_desc">Project StarLight Logo</string>

    <string name="locale_name">ENGLISH</string>

    <string name="title_projects">Projects</string>
    <string name="title_plugins">Plugins</string>
    <string name="title_settings">Settings</string>
    <string name="title_logs">Logs</string>
    <string name="title_show_all">Show all</string>

    <string name="title_widgets">Widgets</string>
    <string name="subtitle_widgets">There are %d Widgets.</string>

    <string name="title_notification_rules">Notification Rules</string>
    <string name="subtitle_notification_rules">There are %d Rules.</string>

    <string name="file">File</string>
    <string name="directory">Directory</string>

    <string name="add">Add</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="finish">Finish</string>
    <string name="create">Create</string>
    <string name="show_more">Show more</string>
    <string name="send">Send</string>
    <string name="edit">Edit</string>

    <string name="step_default_lib">Loading default libraries…</string>
    <string name="step_check_kakaotalk_version">Checking KakaoTalk version…</string>
    <string name="step_plugincore_init">Loading PluginCore…</string>
    <string name="step_plugins">Loading [%s] …</string>
    <string name="step_projects">Loading Projects…</string>
    <string name="step_init_editor">Initializing code editor…</string>
    <string name="step_starting">Starting Application…</string>

    <string name="all_project_status">Global Operation : $state</string>
    <string name="subtitle_projects">%d active projects running.</string>
    <string name="subtitle_plugins">%d plug-ins installed.</string>

    <string name="menu_home">Home</string>
    <string name="menu_projects" translatable="false">@string/title_projects</string>
    <string name="menu_plugins" translatable="false">@string/title_plugins</string>
    <string name="menu_settings" translatable="false">@string/title_settings</string>
    <string name="menu_file_tree">Files</string>
    <string name="menu_warnings">Messages</string>

    <string name="project_duplicate_name">Name cannot be duplicated.</string>
    <string name="project_name_format_error">Name can only contain English, Korean, Number, -, and _.</string>
    <string name="project_select_language">Please select a language to be used.</string>
    <string name="project_edit">Edit</string>
    <string name="project_compile">Compile</string>
    <string name="project_debugroom">Debug</string>
    <string name="project_settings">Config</string>
    <string name="project_info">Info</string>
    <string name="project_favorite">Like</string>

    <string name="aligned_by">Aligned by</string>
    <string name="default_placeholder" translatable="false">DEFAULT</string>

    <string name="no_projects">There are no projects yet! (⊙_⊙;)</string>
    <string name="no_plugins">There are no plugins yet! (⊙_⊙;)</string>
    <string name="no_message_yet">There are no errors yet.</string>

    <string name="align_reversed">Descending</string>
    <string name="align_active_first">Align active first</string>

    <string name="debugroom_type_here">Type here…</string>

    <string name="layout_tv_last">Last</string>
    <string name="layout_tv_next">Next</string>
    <string name="layout_tv_replace">Replace</string>
    <string name="layout_tv_replaceAll">Replace All</string>
    <string name="text_to_search">Enter code to find…</string>
    <string name="replacement">Replace</string>
    <string name="home">Home</string>
    <string name="end">End</string>
    <string name="text_actions">Edit code</string>
    <string name="switch_color_scheme">Change Theme</string>
    <string name="beautify">Beautify Code</string>
    <string name="color_scheme">Theme</string>
    <string name="wordwrap">Wrap Line</string>
    <string name="line_number_visibility">Show line numbers</string>
    <string name="compile">Compile</string>
    <string name="save">Save</string>
    <string name="debug_room">Debug Room</string>

    <string name="step_permission">Allow default permissions</string>
    <string name="step_read_notification">Allow notification read</string>
    <string name="step_install_wearable">Location policy</string>
    <string name="step_set_basics">Required set-ups</string>
    <string name="action_previous_step">Prev.</string>
    <string name="action_next_step">Next</string>

    <string name="editor_new_file">New file/dir</string>
    <string name="editor_new_file_title">Name of new file/dir</string>
    <string name="editor_new_file_desc">Please enter the name of file/dir being created.</string>

    <string name="log_foreground_started">Successfully started foreground task!</string>
    <string name="log_project_list_update_failure">Failed to update project list: index not found</string>
    <string name="log_filter_settings">Log filter</string>
    <string name="log_filter_auto_scroll">Auto scroll</string>
    <string name="log_filter_types">Types</string>
    <string name="log_filter_tags">Tags</string>
    <string name="log_filter_message">Message(Regexp)</string>
    <string name="log_type_text">Text</string>
    <string name="log_type_card">Card</string>

    <string name="widget_config_button_text">Widget settings</string>

    <string name="api_cannot_send_to_room">Cannot send message to a room \'%s\' without receiving initial message.</string>

    <string name="splash_welcome">Welcome</string>
    <string name="splash_welcome_desc">Let\'s start with the initial settings!</string>
</resources>