<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mooner.starlight.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_projects"
        android:name="com.mooner.starlight.ui.projects.ProjectsFragment"
        android:label="@string/menu_projects"
        tools:layout="@layout/fragment_projects" />

    <fragment
        android:id="@+id/nav_plugins"
        android:name="com.mooner.starlight.ui.plugins.PluginsFragment"
        android:label="@string/menu_plugins"
        tools:layout="@layout/fragment_plugins" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.mooner.starlight.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_slideshow" />
</navigation>