<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ fragment_logs.xml created by Minki Moon(mooner1022) on 8/5/23, 1:50 PM
  ~ Copyright (c) mooner1022. all rights reserved.
  ~ This code is licensed under the GNU General Public License v3.0.
  -->

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.logs.LogsFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_radius"
        android:background="@color/cardview"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/card_margin_horizontal"
        android:layout_marginEnd="@dimen/card_margin_horizontal"
        android:layout_marginBottom="16dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/card_margin_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/card_margin_horizontal"
        android:layout_marginBottom="48dp"
        android:nestedScrollingEnabled="false"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="@dimen/card_elevation"
        app:cardBackgroundColor="@color/cardview">

        <TextView
            android:id="@+id/textViewNoLogsYet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nanumsquare_round_bold"
            android:text="@string/no_projects"
            android:textAlignment="center"
            android:textSize="18sp"
            android:visibility="gone"
            app:drawableTint="@color/main_bright"
            app:drawableTopCompat="@drawable/ic_box_empty"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewLogs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="@dimen/card_radius"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="@dimen/card_margin_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_gravity="bottom">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewFilter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardCornerRadius="14dp"
            app:cardElevation="@dimen/card_elevation"
            app:cardBackgroundColor="@color/main_dark">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/round_filter_alt_24"
                    android:contentDescription="@string/log_filter_settings"
                    app:tint="@color/white"/>

                <androidx.legacy.widget.Space
                    android:layout_width="6dp"
                    android:layout_height="match_parent"/>

                <TextView
                    android:text="@string/log_filter_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanumsquare_round_bold"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.legacy.widget.Space
            android:layout_width="6dp"
            android:layout_height="match_parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewTypeConfig"
            android:layout_width="52dp"
            android:layout_height="match_parent"
            app:cardCornerRadius="14dp"
            app:cardElevation="@dimen/card_elevation"
            app:cardBackgroundColor="@color/main_dark">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_round_settings_24"
                android:contentDescription="@string/title_settings"
                app:tint="@color/white"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>