<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ activity_quick_start.xml created by Minki Moon(mooner1022) on 22. 2. 5. 오후 2:43
  ~ Copyright (c) mooner1022. all rights reserved.
  ~ This code is licensed under the GNU General Public License v3.0.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.splash.quickstart.QuickStartActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

    <ImageView
        android:id="@+id/imageViewLogo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitEnd"
        android:layout_alignParentEnd="true"
        android:foregroundGravity="right"
        android:adjustViewBounds="true"
        android:layout_gravity="end"
        android:maxHeight="200dp"
        app:layout_collapseMode="parallax"
        app:srcCompat="@drawable/svg_top_title_sunset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.cardview.widget.CardView
        style="@style/Stepper.CardView"
        android:id="@+id/card_stepper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginStart="@dimen/card_margin_horizontal"
        android:layout_marginEnd="@dimen/card_margin_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/cardview">

        <com.aceinteract.android.stepper.StepperNavigationView
            tools:ignore="SpeakableTextPresentCheck"
            android:clipToPadding="false"
            android:paddingTop="40dp"
            android:paddingBottom="40dp"
            android:id="@+id/stepper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:stepperIconSize="20dp"
            app:stepperItems="@menu/menu_stepper"
            app:stepperTextColor="@color/text"
            app:stepperTextSize="12sp"
            app:stepperType="tab"
            app:stepperWidgetColor="@color/main_purple"/>


    </androidx.cardview.widget.CardView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/frame_stepper"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="64dp"
        android:clipToPadding="true"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_stepper_middle"
        app:navGraph="@navigation/nav_stepper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/action_previous_step"
        android:src="@drawable/ic_round_keyboard_arrow_left_24"
        android:visibility="gone"
        app:backgroundTint="@color/main_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="#4c4c4c"
        tools:visibility="visible"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/button_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/main_purple"
        android:text="@string/finish"
        android:textColor="#4c4c4c" android:visibility="gone"
        app:icon="@drawable/ic_round_check_24" app:iconTint="#4c4c4c"
        app:layout_constraintBottom_toBottomOf="@+id/frame_stepper" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/action_next_step"
        android:src="@drawable/ic_round_keyboard_arrow_right_24"
        android:visibility="gone"
        app:backgroundTint="@color/main_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="#4c4c4c"
        tools:visibility="visible"/>

    <View
        android:id="@+id/guideline_stepper_middle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@id/card_stepper"
        app:layout_constraintTop_toTopOf="@id/card_stepper"/>

</androidx.constraintlayout.widget.ConstraintLayout>